k8s/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app-deployment
  namespace: default
  labels:
    app: todo-app
    istio: monitor  
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
        istio: monitor
    spec:
      containers:
      - name: todo-app
        image: docker.io/ziyadtarek99/todopy:v2
        ports:
        - containerPort: 5000
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 10
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 20
          periodSeconds: 10
        resources:
          requests:
            memory: "128Mi"
            cpu: "500m"
          limits:
            memory: "256Mi"
            cpu: "1000m"
