k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
  namespace: default
  labels:
    app: todo-app
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 5000
  selector:
    app: todo-app
